errors.txt
 85%] Building CXX object CMakeFiles/MICROBIT.dir/pxtapp/st7735/screen.cpp.obj
/src/pxtapp/st7735/screen.cpp: In constructor 'pxt::WDisplay::WDisplay()':
/src/pxtapp/st7735/screen.cpp:65:38: error: no matching function for call to 'codal::SPIScreenIO::SPIScreenIO(codal::SPI&)'
             io = new SPIScreenIO(*spi);
                                      ^
In file included from /src/pxtapp/st7735/screen.cpp:9:0:
/src/libraries/codal-core/./inc/drivers/SPIScreenIO.h:39:5: 
note: candidate: codal::SPIScreenIO::SPIScreenIO(codal::NRF52SPI&)
     SPIScreenIO(SPI &spi);
     ^~~~~~~~~~~
/src/libraries/codal-core/./inc/drivers/SPIScreenIO.h:39:5: note:   no known conversion for argument 1 from 'codal::SPI' to 'codal::NRF52SPI&'
/src/libraries/codal-core/./inc/drivers/SPIScreenIO.h:35:7: note: candidate: constexpr codal::SPIScreenIO::SPIScreenIO(const codal::SPIScreenIO&)
 class SPIScreenIO : public ScreenIO
       ^~~~~~~~~~~
/src/libraries/codal-core/./inc/drivers/SPIScreenIO.h:35:7: note:   no known conversion for argument 1 from 'codal::SPI' to 'const codal::SPIScreenIO&'
/src/libraries/codal-core/./inc/drivers/SPIScreenIO.h:35:7: note: 
candidate: constexpr codal::SPIScreenIO::SPIScreenIO(codal::SPIScreenIO&&)
/src/libraries/codal-core/./inc/drivers/SPIScreenIO.h:35:7: note:   
no known conversion for argument 1 from 'codal::SPI' to 'codal::SPIScreenIO&&'
/src/pxtapp/st7735/screen.cpp:84:86: error: invalid conversion from 'codal::SPI*' to 'codal::NRF52SPI*' [-fpermissive]

             smart = new JDDisplay(spi, LOOKUP_PIN(DISPLAY_CS), LOOKUP_PIN(DISPLAY_DC));
                                                                                      ^
In file included from /src/pxtapp/st7735/screen.cpp:11:0:
/src/pxtapp/st7735/jddisplay.h:52:5: note:   initializing argument 1 of 'pxt::JDDisplay::JDDisplay(codal::NRF52SPI*, codal::Pin*, codal::Pin*)'
     JDDisplay(SPI *spi, Pin *cs, Pin *flow);
     ^~~~~~~~~
make[2]: *** [CMakeFiles/MICROBIT.dir/pxtapp/st7735/screen.cpp.obj] Error 1
make[1]: *** [CMakeFiles/MICROBIT.dir/all] Error 2
make: *** [all] Error 2


